PHP_CompatInfo ChangeLog
========================
:author:      Laurent Laville
:email:       pear@laurent-laville.org
:stylesdir:   styles
:scriptsdir:  js

== Version 2.10.0 (2012-mm-dd)

.Additions and changes:
* add 1 new references data dictionnaries related to extensions:
  imagick
* add clear-cache sub-command to CLI version
* upgrade xcache reference to version 3.0.0

.Bug fixes:
* GH-51 fix _--report-file_ option with file in current path directory


== Version 2.9.0 (2012-10-29)

.Versions summary:
* 2.9.0 support all PHP versions until 5.4.8
* 2.8.0 support all PHP versions until 5.4.7
* 2.7.0 support all PHP versions until 5.4.6
* 2.6.0 support all PHP versions until 5.4.5
* 2.5.0 support all PHP versions until 5.4.4
* 2.4.0 support all PHP versions until 5.4.3
* 2.3.0 support all PHP versions until 5.4.0
* 2.2.0 support all PHP versions until 5.3.10
* 2.1.0 support all PHP versions until 5.3.8

.Additions and changes:
* all required resources used now the default autoloader
* allow to run either a stand-alone or pear installed version
* Reports refactoring (33 percent code reduced)
* Source, Database and Reference reports
will not be print anymore on standard output when _--report-file_ option used
* CAUTION: BC breaks with API 2.8.0 with the new filter system
* *list-references* does not require _--reference_ option anymore (always used ALL)
* results of *list-references* may now be filtered
* add a full report (all results at once:
summary, extensions, interfaces, traits, classes, functions, constants, globals, tokens, conditions)
* fixed Reference interface about new filter API
* WARNING: PHP_Timer 1.0.4 (autoloader) break PHP 5.2 compatibility, so the print resource feature become optional
* improved true results again with detection of conditional code and excludes from parsing
* upgrade ssh reference to version 0.12 (thanks to Remi Collet)
* upgrade openssl reference with new PHP 5.4.8 constants (thanks to Remi Collet)