@@ -59,6 +59,7 @@ Additions and changes:
   imagick
 - add clear-cache sub-command to CLI version
 - upgrade xcache reference to version 3.0.0
+- used temporary system directory rather than /tmp that does not exists by default on windows
 
 Bug fixes:
 - GH-51 fix --report-file option with file in current path directory
